@@ -1,6 +1,7 @@
 * Added workaround for crash in gtk-run with old libmenu-cache.
 * Core functions are separated into a private library to allow reliable
     linking of modules using -Wl,-z,defs.
+* Added macro LXPANEL_CHECK_VERSION() for third party pluguns API check.
 
 0.7.2
 -------------------------------------------------------------------------
